--- a/web-2024.md
+++ b/web-2024.md
@@ -146,7 +146,7 @@ sqlmap直接跑。
 
 
 
-那么读写时候的路径是怎么确定的呢？比如说：D:\develop\phpstudy\phpstudy_pro\WWW\demo01  你是怎么知道这个路径的：
+那么读写时候的路径是怎么确定的呢？比如说：D:\d\asdasd\ 你是怎么知道这个路径的：
 
 1、有时候一些报错信息会有路径
 
@@ -488,7 +488,8 @@ udf：就是自己定义的函数，一般都是dll文件，是c、c++写的。
 
 这里演示是通过hex上传：
 
-![image-20250305214948927](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161621080.png)
+<img width="1205" height="287" alt="image" src="https://github.com/user-attachments/assets/128d1ff3-b6f2-43a8-8469-e3082f044905" />
+
 
 这里上传hex，可能会不允许上传，因为secure_file_priv设置的为null。就是禁止写入，所以需要设置为secure_file_priv=
 
@@ -1267,3 +1268,4 @@ hook：就是你动态调试app时候，然后看着其调用的类
 burpjslinkfinder
 
 前10介绍了几个好用的信息收集工具
+
